--- a/apps/my-work/project.json
+++ b/apps/my-work/project.json
@@ -48,7 +48,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "my-work:build",
-        "hmr": true
+        "hmr": true,
+        "proxyConfig": "apps/my-work/proxy.conf.json"
       },
       "configurations": {
         "development": {
