--- a/apps/my-work/tsconfig.json
+++ b/apps/my-work/tsconfig.json
@@ -10,12 +10,7 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "paths": {
-      "@/*": ["./src/*"],
-      "@tdo-ui/core": ["libs/core/src/index.ts"],
-      "@tdo-ui/core/*": ["libs/core/src/*"]
-    }
+    "noFallthroughCasesInSwitch": true
   },
   "files": [],
   "include": [],
