--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nrwl/eslint-plugin-nx": "14.1.5",
     "@nrwl/jest": "14.1.5",
     "@nrwl/linter": "14.1.5",
+    "@nrwl/nest": "^14.1.7",
     "@nrwl/react": "^14.1.5",
     "@nrwl/web": "14.1.5",
     "@nrwl/workspace": "14.1.5",
