--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "env-cmd -f apps/my-work/.env.local nx serve",
+    "start:wedding": "nx run my-wedding:serve:development",
     "build": "nx build",
     "test": "nx test"
   },
@@ -14,6 +15,7 @@
     "@choc-ui/chakra-autocomplete": "^4.22.0",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@nrwl/next": "14.1.7",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
@@ -22,13 +24,16 @@
     "inversify": "^6.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "next": "12.1.5",
     "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-base-table": "^1.13.1",
     "react-dom": "18.1.0",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.3.1",
     "react-query": "^3.39.0",
     "react-router-dom": "6.3.0",
+    "react-scroll-section": "^3.1.0",
     "react-use": "^17.3.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
@@ -44,6 +49,7 @@
     "@nrwl/jest": "14.1.5",
     "@nrwl/linter": "14.1.5",
     "@nrwl/nest": "^14.1.7",
+    "@nrwl/next": "^14.1.7",
     "@nrwl/react": "^14.1.5",
     "@nrwl/web": "14.1.5",
     "@nrwl/workspace": "14.1.5",
@@ -63,6 +69,7 @@
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -71,6 +78,7 @@
     "eslint-plugin-react-hooks": "4.5.0",
     "eslint-plugin-storybook": "^0.5.11",
     "jest": "27.5.1",
+    "next-transpile-modules": "^9.0.0",
     "nx": "14.1.5",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
