--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@my-wedding/*": ["apps/my-wedding/*"],
       "@my-work/*": ["apps/my-work/src/*"],
       "@tdo-ui/core": ["libs/core/src/index.ts"],
-      "@tdo-ui/core/*": ["libs/core/src/*"],
+      "@tdo-ui/core/*": ["libs/core/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
