update my-wedding project

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "6.3.0",
     "react-scroll-section": "^3.1.0",
     "react-use": "^17.3.2",
+    "react-visibility-sensor": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0",
