--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "inversify": "^6.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "motion": "^10.8.2",
     "next": "12.1.5",
     "query-string": "^7.1.1",
     "react": "18.1.0",
@@ -31,6 +32,7 @@
     "react-dom": "18.1.0",
     "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-query": "^3.39.0",
     "react-router-dom": "6.3.0",
     "react-scroll-section": "^3.1.0",
