update socket io

--- a/apps/my-work/.babelrc
+++ b/apps/my-work/.babelrc
@@ -7,5 +7,9 @@
       }
     ]
   ],
-  "plugins": []
+  "plugins": [
+    "babel-plugin-transform-typescript-metadata",
+    "babel-plugin-parameter-decorator",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+  ]
 }
