--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,17 +2,25 @@
   "compileOnSave": false,
   "compilerOptions": {
     "rootDir": ".",
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
     "sourceMap": true,
     "declaration": true,
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "esnext",
     "module": "esnext",
-    "lib": ["es2017", "DOM", "DOM.Iterable"],
+    "lib": ["dom", "dom.Iterable", "esnext"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "types": ["reflect-metadata"],
     "baseUrl": ".",
     "paths": {
       "@my-wedding/*": ["apps/my-wedding/*"],
