--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@nrwl/next": "14.1.7",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "http-proxy-middleware": "^2.0.6",
     "inversify": "^6.0.1",
+    "inversify-inject-decorators": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "motion": "^10.8.2",
@@ -40,11 +42,13 @@
     "react-visibility-sensor": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "socket.io-client": "^4.5.1",
     "tslib": "^2.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-decorators": "^7.18.2",
     "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.1.5",
     "@nrwl/cypress": "14.1.5",
@@ -70,7 +74,10 @@
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "cypress": "^9.1.0",
+    "env-cmd": "^10.1.0",
     "eslint": "~8.12.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
