--- a/apps/my-work/.babelrc
+++ b/apps/my-work/.babelrc
@@ -10,6 +10,10 @@
   "plugins": [
     "babel-plugin-transform-typescript-metadata",
     "babel-plugin-parameter-decorator",
-    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+    "@babel/plugin-transform-block-scoping",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }],
+    ["@babel/plugin-proposal-private-methods", { "loose": true }]
   ]
 }
