--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-block-scoping": "^7.18.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.17.12",
     "@chakra-ui/icons": "^2.0.0",
     "@chakra-ui/react": "2.0.0",
     "@choc-ui/chakra-autocomplete": "^4.22.0",
@@ -20,9 +22,10 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
-    "framer-motion": "^6",
+    "framer-motion": "^6.3.11",
     "http-proxy-middleware": "^2.0.6",
     "inversify": "^6.0.1",
+    "inversify-binding-decorators": "^4.0.0",
     "inversify-inject-decorators": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -48,8 +51,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-decorators": "^7.18.2",
-    "@babel/preset-typescript": "7.12.13",
+    "@babel/plugin-proposal-private-methods": "^7.17.12",
+    "@babel/plugin-proposal-private-property-in-object": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@nrwl/cli": "14.1.5",
     "@nrwl/cypress": "14.1.5",
     "@nrwl/eslint-plugin-nx": "14.1.5",
@@ -95,7 +102,7 @@
     "storybook-builder-vite": "^0.1.23",
     "storybook-css-modules-preset": "^1.1.1",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
+    "ts-node": "10.8.1",
     "typescript": "~4.6.2",
     "url-loader": "^3.0.0"
   }
