--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "license": "MIT",
   "scripts": {
     "start": "env-cmd -f apps/my-work/.env.local nx serve",
-    "start:wedding": "nx run my-wedding:serve:development",
+    "start:wedding": "env-cmd -f apps/my-wedding/.env nx run my-wedding:serve:development",
     "build": "nx build",
     "test": "nx test"
   },
   "private": true,
   "dependencies": {
-    "@babel/plugin-transform-block-scoping": "^7.18.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.17.12",
-    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/icons": "2.0.0",
     "@chakra-ui/react": "2.0.0",
     "@choc-ui/chakra-autocomplete": "^4.22.0",
     "@emotion/react": "11",
     "@emotion/styled": "11",
-    "@nrwl/next": "14.1.7",
-    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
@@ -31,6 +27,7 @@
     "moment": "^2.29.3",
     "motion": "^10.8.2",
     "next": "12.1.5",
+    "next-translate": "^1.4.0",
     "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-base-table": "^1.13.1",
@@ -45,28 +42,28 @@
     "react-visibility-sensor": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
-    "socket.io-client": "^4.5.1",
+    "socket.io-client": "1.4.8",
     "tslib": "^2.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-proposal-decorators": "^7.18.2",
-    "@babel/plugin-proposal-private-methods": "^7.17.12",
-    "@babel/plugin-proposal-private-property-in-object": "^7.17.12",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@nrwl/cli": "14.1.5",
-    "@nrwl/cypress": "14.1.5",
-    "@nrwl/eslint-plugin-nx": "14.1.5",
-    "@nrwl/jest": "14.1.5",
-    "@nrwl/linter": "14.1.5",
-    "@nrwl/nest": "^14.1.7",
-    "@nrwl/next": "^14.1.7",
-    "@nrwl/react": "^14.1.5",
-    "@nrwl/web": "14.1.5",
-    "@nrwl/workspace": "14.1.5",
+    "@babel/core": "7.18.2",
+    "@babel/plugin-proposal-class-properties": "7.17.12",
+    "@babel/plugin-proposal-decorators": "7.18.2",
+    "@babel/plugin-proposal-private-methods": "7.17.12",
+    "@babel/plugin-proposal-private-property-in-object": "7.17.12",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-typescript": "7.17.12",
+    "@nrwl/cli": "14.2.4",
+    "@nrwl/cypress": "14.2.4",
+    "@nrwl/eslint-plugin-nx": "14.2.4",
+    "@nrwl/jest": "14.2.4",
+    "@nrwl/linter": "14.2.4",
+    "@nrwl/nest": "14.2.4",
+    "@nrwl/next": "14.2.4",
+    "@nrwl/react": "14.2.4",
+    "@nrwl/web": "14.2.4",
+    "@nrwl/workspace": "14.2.4",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.1.1",
     "@types/axios": "^0.14.0",
@@ -76,6 +73,7 @@
     "@types/react-dom": "18.0.3",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "5.3.3",
+    "@types/socket.io-client": "1.4.36",
     "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
@@ -96,7 +94,7 @@
     "eslint-plugin-storybook": "^0.5.11",
     "jest": "27.5.1",
     "next-transpile-modules": "^9.0.0",
-    "nx": "14.1.5",
+    "nx": "14.2.4",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.1.0",
     "storybook-builder-vite": "^0.1.23",
@@ -107,3 +105,4 @@
     "url-loader": "^3.0.0"
   }
 }
+
