--- a/apps/my-wedding/tsconfig.json
+++ b/apps/my-wedding/tsconfig.json
@@ -13,6 +13,6 @@
     "incremental": true,
     "types": ["jest", "node"]
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts", "i18n.js"],
   "exclude": ["node_modules", "jest.config.ts"]
 }
