--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,11 @@
 {
-  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
+  "routes": [
+    { "src": "/[^.]+", "dest": "/", "status": 200 }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://api.tdo.works/:path*/"
+    }
+  ]
 }
