revert vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "routes": [
-    { "src": "/[^.]+", "dest": "/", "status": 200 }
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://api.tdo.works/:path*/"
+    }
   ]
 }
