--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "https://api.tdo.works/:path*/"
-    }
-  ]
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
