--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "motion": "^10.8.2",
     "next": "12.1.5",
     "next-translate": "^1.4.0",
+    "node-rsa": "^1.1.1",
     "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-base-table": "^1.13.1",
@@ -69,11 +70,13 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/node-rsa": "^1.1.1",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "5.3.3",
     "@types/socket.io-client": "1.4.36",
+    "@types/srp": "^0.0.29",
     "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
@@ -105,4 +108,3 @@
     "url-loader": "^3.0.0"
   }
 }
-
