--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-inject-decorators": "^3.1.0",
+    "js-srp": "^0.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "motion": "^10.8.2",
     "next": "12.1.5",
     "next-translate": "^1.4.0",
     "node-rsa": "^1.1.1",
+    "node-srp": "^0.0.1",
     "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-base-table": "^1.13.1",
